<resources>
    //forgot password
    <string name="forgot_password_title">FORGOT \n PASSWORD</string>

    //firebase
    <string name="field_email">semail</string>
    <string name="chapter_progress">ChapterProgress</string>
    <string name="dbname_students">Students</string>
    <string name="dbname_chapter">Chapter</string>
    <string name="dbname_lesson">Lesson</string>
    <string name="app_name">Pangea</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="chapters">Chapters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="manage_account">Manage Account</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account_yet_click_here">Do you have an account yet?</string>
    <string name="lesson">Lesson</string>
    <string name="section">Section</string>
    <string name="home">HOME</string>
    <string name="definition">DEFINITION</string>
    <string name="profile">PROFILE</string>
    <string name="about">About</string>
    <string name="current_email">Current Email</string>
    <string name="confirm">Confirm</string>
    <string name="enter_new_email_address">Enter new email address.</string>
    <string name="re_enter_new_email_address">Re-enter new email address.</string>
    <string name="edit_email">Edit Email</string>
    <string name="attempt">Attempt</string>
    <string name="show_password">Show Password</string>
    <string name="todo">TODO</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password_message">Note: Please click on the button “Reset password” in order to update your password. We will send you an email to your account’s email address, where you can change your password.</string>
    <string name="change_password">Change Password</string>
    <string name="settings_image">Settings Image</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="account">Account</string>
    <string name="information">Information</string>
    <string name="app_ver_1_0_1">App ver 1.0.1</string>
    <string name="save">Save</string>
    <string name="note_you_still_need_to_verify_your_new_email_after_successfully_changing_email">Note: You still need to verify your new email after successfully changing email.</string>
    <string name="gaea">Gaea</string>
    <string name="earth_and_space_science">Earth and Space Science</string>
    <string name="ii_learning_competencies_objectives">II. Learning Competencies/Objectives</string>
    <string name="about_message">\t\tThis is a learning application design for grade 10 students of Paracale National High School,
                                    covering Earth and Space Science aiming to help students and provide a better learning environment
                                    by incorporating simple and understandable content that is entertaining and educational. In addition,
                                    it is intended to help students better understand the subject in less stressful way that the students would like.
    </string>
    <string name="credits">Authors</string>
    <string name="authors_and_credits">Authors</string>
    <string name="author_and_credits_message">The following created this android application: \n\n 1. Noel M. Dasco Jr.\n 2. Justine Paulo T. Era \n 3. Mariel T. Zaballas</string>


</resources>
