<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsFragment">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="151dp"
        android:layout_height="42dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnManageAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_account"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="@+id/btnAbout" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/btnManageAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>