<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gitblack"
    tools:context=".Fragment.EditPasswordFragment">


    <Button
        android:id="@+id/btnResetPW"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@null"
        android:text="@string/reset_password"
        android:textColor="@color/gitwhite"

        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintWidth_percent=".60"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="76dp"
        android:layout_height="73dp"
        android:contentDescription="@string/settings_image"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/settings"
        android:textColor="@color/gitwhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/change_password"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="258dp"
        android:layout_height="93dp"
        android:text="@string/reset_password_message"
        android:textColor="@color/gitwhite"
        app:layout_constraintBottom_toTopOf="@+id/btnResetPW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       app:layout_constraintGuide_percent=".2"/>

</androidx.constraintlayout.widget.ConstraintLayout>