<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_registrationbg"
    android:textColor="@color/gitgray"
    tools:context=".Activity.RegistrationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="1dp">


    <TextView
        android:id="@+id/tvLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:textSize="24sp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/register"
        android:textColor="@color/gitwhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="0.909" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin2"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin2"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="@+id/tvLogin2"
        app:layout_constraintWidth_percent=".2"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:backgroundTint="@null"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/gitwhite"
        android:textColorHint="@color/gitgray"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSection"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="@+id/spinnerSection"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSection"
        app:layout_constraintWidth_percent=".60" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/gitwhite"
        android:textColorHint="@color/gitgray"
        app:layout_constraintEnd_toEndOf="@+id/edtLastName"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName"
        app:layout_constraintWidth_percent=".60" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/gitwhite"
        android:textColorHint="@color/gitgray"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintWidth_percent=".60" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".60"
        app:layout_constraintHeight_percent=".06"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/last_name"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/gitwhite"
        android:textColorHint="@color/gitgray"
        app:layout_constraintEnd_toEndOf="@+id/edtFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <Button
        android:textStyle="bold"
        android:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:textColor="@color/gitwhite"
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".60"
        app:layout_constraintHeight_percent=".06"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/cbRegistrationShowPassword"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Sign in."
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#E4B2B2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHaveAccount2"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        app:layout_constraintVertical_bias=".5" />

    <ProgressBar

        android:id="@+id/loginprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="#E4B2B2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        app:layout_constraintVertical_bias=".5" />

    <Spinner
        android:id="@+id/spinnerSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/style_spinner"
        android:backgroundTint="@null"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintWidth_percent=".60" />

    <CheckBox
        android:id="@+id/cbRegistrationShowPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".40"
        app:layout_constraintHeight_percent=".04"
        android:buttonTint="@color/gitwhite"
        android:text="@string/show_password"
        android:textColor="@color/gitwhite"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:ignore="TouchTargetSizeCheck" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="247dp" />

    <TextView
        android:id="@+id/tvHaveAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_an_account_yet_click_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

</androidx.constraintlayout.widget.ConstraintLayout>