<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gitblack"
    tools:context=".Activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="167dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/edtEmail"
            app:layout_constraintEnd_toEndOf="@+id/tvLogin"
            app:layout_constraintStart_toStartOf="@+id/tvLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/login"
            android:textColor="#F1EAEA"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/edtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            app:layout_constraintVertical_bias="0.0" />

        <EditText

            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="12"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/gitwhite"
            android:textColorHighlight="#EFBEBE"
            android:textColorHint="@color/gitgray"
            android:textColorLink="#836B6B"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline13"
            app:layout_constraintVertical_bias="0.94"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:ems="12"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/gitwhite"
            android:textColorHint="@color/gitgray"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="15"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/login"
            android:textColor="@color/gitblack"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/cbShowPassword"
            app:layout_constraintTop_toBottomOf="@+id/cbShowPassword" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/forgot_password"
            android:textColor="#F2F2F2"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/register"
            android:textColor="#F2F2F2"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toEndOf="@+id/tvForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <ProgressBar
            android:id="@+id/loginprogressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/gitwhite"
            android:text="@string/show_password"
            android:textColor="@color/gitwhite"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.51" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>